--- a/css/styles.css
+++ b/css/styles.css
@@ -347,9 +347,15 @@ h1,
 }
 @media (min-width: 950px) {
   .center-box {
-    margin-bottom: calc(var(--index) * 3);
+    margin-bottom: calc(var(--index) * 2);
   }
   .btn-back {
     padding: 2em 4em;
   }
+}
+.namePosition {
+  text-align: left;
+  font-size: 2em;
+  color: #00000063;
+  text-shadow: 0px 1px 0px #e2dbdb;
 }
