--- a/Lesson1/tasks/task3/css/styles.css
+++ b/Lesson1/tasks/task3/css/styles.css
@@ -148,3 +148,11 @@ a.btn-back {
     word-break: break-all;
   }
 }
+.solution3 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.sum {
+  color: var(--accent);
+}
