--- a/Lesson1/css/styles.css
+++ b/Lesson1/css/styles.css
@@ -126,7 +126,9 @@ a.btn-back {
 .btn-back button {
   width: 100%;
   max-width: 500px;
+  color: #1f1e1edc;
   margin: 0 auto;
+  font-size: 1em;
   padding: 1em 2.5em;
   display: flex;
   justify-content: center;
