--- a/Lesson1/tasks/task15/css/styles.css
+++ b/Lesson1/tasks/task15/css/styles.css
@@ -1,31 +1,3 @@
-:root {
-  --index: calc(1vw + 1vh);
-  --white: #b9b7b7;
-}
-body {
-  background-color: rgba(185, 182, 182, 0.5);
-  background-color: #444343fb;
-  background-color: rgba(0, 0, 0, 0.8);
-
-  font-size: 1rem;
-  color: var(--white);
-}
-
-h1 {
-  font-weight: 900;
-  font-size: calc(var(--index) * 10);
-  text-align: center;
-  color: var(--white);
-  word-wrap: break-word;
-}
-.letter {
-  text-transform: uppercase;
-  text-shadow: 25px 0px 35px rgba(0, 0, 0, 0.5);
-  position: relative;
-  color: #fff;
-  margin-left: calc(var(--index) * -2);
-  /* right: calc(var(--index) * -1.5); */
-}
 /* .task-wrapper {
 }
 .task-card {
@@ -81,13 +53,6 @@ body {
 }
 .task-title {
   text-align: center;
-  margin-bottom: 20px;
-}
-h1#title-task1 {
-  margin: 0;
-  padding: 10px;
-  margin-bottom: 20px;
-  text-align: center;
 }
 .task-solution {
   padding: 10px;
@@ -111,7 +76,7 @@ h1#title-task1 {
   align-items: center;
   border-radius: 30px;
   font-weight: 500;
-
+  color: #d8f806;
   color: #c6dd31;
   /* color: #fff; */
   letter-spacing: 1px;
@@ -122,7 +87,7 @@ h1#title-task1 {
 
   box-shadow: inset 8px 8px 15px #f0e6e66b, inset -10px -10px 10px #00000025,
     -2px -2px 4px #ffffffa5, 2px 2px 4px #000, inset 0px -15px 20px #00000066;
-  width: 90%;
+  width: 50%;
   transition: 0.3;
 }
 .task-btn:hover {
@@ -139,9 +104,9 @@ a.btn-back {
   list-style-type: none;
   text-decoration: none;
   margin-bottom: 50px;
+  color: #000;
 }
 .btn-back {
-  color: #000;
 }
 .btn-back button {
   width: 100%;
@@ -157,11 +122,12 @@ a.btn-back {
     #999,
     #0000006c
   );
-  box-shadow: -2px -2px 1px #ffffff7c, 10px -10px 10px #ffffff0e,
+  box-shadow: -10px -10px 10px #ffffff0e, 10px -10px 10px #ffffff0e,
     0px 1px 2px #dbf628c7, 0px 2px 1px #110202, 10px 10px 10px #000;
   border-radius: 35px;
 
   transition: 0.3s;
+  color: #000;
 }
 .btn-back button:hover {
   background: linear-gradient(
